# PrismAgent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_best_practice.py  test_direct.txt  test_direct_ps.py  test_simple.py
config/: memory.md
mcp_servers/code_server/: README.md  TERMINAL_USAGE.md  pyproject.toml  server.py
mcp_servers/code_server/src/: __init__.py  audit.py  files.py  terminal.py
mcp_servers/math_server/: README.md  pyproject.toml  server.py
mcp_servers/math_server/src/: calculus.py  complex_ops.py  equations.py  geometry.py  real_ops.py  sequences.py  stats.py  symbolic.py  vectors.py
mcp_servers/web_server/: README.md  pyproject.toml  server.py
mcp_servers/web_server/src/: __init__.py  download_file.py  search_url.py  search_utils.py  serper_search.py
mcp_servers/web_server/src/search_result_templates/: image.json  lens.json  location.json  news.json  scholar.json  shopping.json  video.json
models/: baseclient.py  deepseek.py  qwen.py
models/utils/: TokenTracker.py  chat.py  frontend.py  mcp.py  mcp_utils.py  tracker.py
