[project]
name = "prismagent"
version = "0.1.0"
description = "A sophisticated multi-model agent framework powered by MCP (Model Context Protocol)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
