[project]
name = "math-server"
version = "0.1.0"
description = "MCP server providing mathematical tools."
authors = [
    { name = "AdaLovelemon", email = "AdaLovelemon@gmail.com" }
]
dependencies = [
    "mcp[fastmcp]",
    "sympy>=1.12",
    "numpy>=1.24.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
math-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
