[project]
name = "web_server"
version = "0.1.0"
description = "Web-based MCP Server for search and webpage fetching"
dependencies = [
    "mcp[fastmcp]",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
